[package]
name = "cs-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# M10 Track W iter 1 + closeout — feature flags so the runtime can
# build for targets that don't support runtime native codegen (WASM)
# or dynamic library loading (WASM, sandboxed embeds).
#
# `default` keeps the native build's surface identical to pre-M10.
# `--no-default-features` produces a minimal runtime suitable for
# wasm32-wasip1.
# Layer 2 (Rc-backed Gc<T> + synchronous cycle detector) is
# unconditional after countable-memory iter 12b — ADR 0014.
default = ["jit", "ffi-dynamic", "regions", "stdlib"]
# Enables `cs-jit*` deps and `Runtime::install_jit` / `jit_lowerer`.
# Disabled in WASM and AOT-binary builds (which inline their codegen
# at build time instead of at runtime).
jit = ["dep:cs-jit", "dep:cs-jit-cranelift"]
# Enables the `cs-ffi` trait surface (HostProcedure, RuntimeFfi ABI
# types) and `Runtime::register_host_procedure`. Pure Rust; portable
# to WASM. A WASM embedder that wants custom Scheme builtins
# implemented in Rust enables `ffi-trait` but skips `ffi-dynamic`.
ffi-trait = ["dep:cs-ffi"]
# Enables dynamic shared-library loading: `(load-shared-library)`,
# `RuntimeFfiContext` (the dlopen-time C-ABI context), the `CAbiProc`
# wrapper adapting C-ABI plugins to the HostProcedure trait. Requires
# `libloading::Library::new` which is unavailable on WASM (no
# `dlopen`). Implies `ffi-trait`.
ffi-dynamic = ["ffi-trait", "dep:libloading"]
# Convenience alias preserving the pre-closeout name. Equivalent to
# enabling both `ffi-trait` and `ffi-dynamic`. Kept so external Rust
# embedders that wrote `features = ["ffi"]` against the W1 API stay
# building.
ffi = ["ffi-dynamic"]
# Forwards the cs-gc `regions` feature so layer-3 (region memory)
# APIs (`Region`, `Gc::new_in`, `Promote::promote_deep`) are
# available in runtime contexts. Region-memory spec iter 6
# flipped this default-on.
regions = [
    "cs-core/regions",
    "cs-gc/regions",
    "cs-vm/regions",
    "cs-jit-cranelift?/regions",
]
# Forwards the cs-gc `tracing-cycle-collector` feature
# (layer 4 of the unified memory architecture). Off by
# default; opt in for embedders that want a residual-cycle
# sweep on top of the layer-2 synchronous detector.
tracing-cycle-collector = [
    "cs-core/tracing-cycle-collector",
    "cs-gc/tracing-cycle-collector",
    "cs-vm/tracing-cycle-collector",
]
# Forwards the cs-gc `alloc-histogram` feature (cs-i6p.1):
# per-type allocation histogram surfaced through `(gc-stats)`'s
# `alloc-histogram` key. Off by default — no cost on the
# `Gc::new` hot path when disabled.
alloc-histogram = ["cs-gc/alloc-histogram"]
# BEAM-style actor primops. Pulls in cs-actor + cs-table + cs-hotreload
# (tokio, dashmap) and registers (spawn, send, raw-receive, self),
# the cs-table CRUD, and the cs-hotreload version-table primops as
# Scheme builtins. Disabled on WASM (tokio's rt-multi-thread needs
# real threads) and on bare-AOT builds. The `lib/beam/prelude.scm`
# library only loads when this feature is on.
actor = ["dep:cs-actor", "dep:cs-table", "dep:cs-hotreload", "dep:tokio", "dep:corosensei"]
# Cross-node cluster transport. Exposes (node-make / node-link! / node-send /
# node-poll) Scheme builtins that drive cs-distrib's Router over cs-net
# transports (sim today; tcp/quic share the same Transport trait). Implies
# `actor` because cross-node consensus builds on the actor substrate and the
# SendableValue boundary. Pulls cs-net (sim transport) + cs-distrib
# (NodeId/DistPid/Router). Default-off on WASM/AOT like `actor`.
distrib = ["actor", "dep:cs-net", "dep:cs-distrib", "cs-net/dev-certs", "cs-net/quic"]
# First-class MPMC channels (spec: docs/research/channels_spec.md).
# Implies `actor` because cs-channel shares the cs-actor tokio
# runtime + the SendableValue boundary.
channel = ["actor", "dep:cs-channel"]
# ADR 0015 L2 — WASM-instance sandbox builtins. Pulls in
# cs-sandbox-wasm + wasmtime. Default off because the wasmtime
# dep is ~30s of compile time and not useful for non-sandbox
# builds.
sandbox = ["dep:cs-sandbox-wasm"]
# Tower-style web framework primops (web-server-create,
# web-route-static!, web-server-start, ...). Pulls in cs-web
# (with its actor + table integrations) — implies `actor` since
# cs-web shares the cs-actor / cs-table fabric. Default off so
# the hyper compile cost is opt-in.
web = ["actor", "dep:cs-web"]
# Optional: also expose `web-route-module!` (loads a cdylib
# plugin and grafts its routes onto the running server).
# Implies `web`. Native-only — libloading isn't available on
# WASM.
web-modules = ["web", "cs-web/modules"]
# Cleartext-HTTP/2 (h2c) gRPC server transport primops
# (grpc-serve, grpc-request-path/bytes, grpc-respond!,
# grpc-respond-error!). Reuses cs-web's hyper transport + the
# cs-actor mailbox bridge, so it implies `web` (and thus `actor`).
# Default off — gRPC framing + trailers are only needed by the
# etcd-compatible store (crab-watchstore). Enables BOTH the h2c
# transport (`cs-web/grpc`) and the TLS/mTLS variant
# (`cs-web/grpc-tls`): `grpc-serve-tls` + `grpc-request-peer-identity`
# (cw-u4a.21) ride alongside the cleartext `grpc-serve`.
grpc = ["web", "cs-web/grpc", "cs-web/grpc-tls"]

# ----- (crab …) stdlib modules — see .spec-workflow/specs/stdlib-modules
#
# `stdlib` is the umbrella: every Tier-1/2/3 module compiled in.
# Per-module flags (`stdlib-path`, `stdlib-fs`, …) toggle individual
# crates so embedders can build subset distributions. Each per-module
# flag implies `ffi-trait` because registration goes through
# `register_host_procedure`.
stdlib = [
    "stdlib-path",
    "stdlib-fs",
    "stdlib-os",
    "stdlib-process",
    "stdlib-string",
    "stdlib-format",
    "stdlib-regex",
    "stdlib-time",
    "stdlib-random",
    "stdlib-uuid",
    "stdlib-json",
    "stdlib-csv",
    "stdlib-toml",
    "stdlib-base",
    "stdlib-url",
    "stdlib-hash",
    "stdlib-compress",
    "stdlib-deflate",
    "stdlib-archive",
    "stdlib-log",
    "stdlib-metrics",
    "stdlib-net",
    "stdlib-http",
    "stdlib-websocket",
    "stdlib-collection",
    "stdlib-math",
    "stdlib-tty",
    "stdlib-signal",
    "stdlib-cli",
    "stdlib-crypto",
    "stdlib-sql",
    "stdlib-xml",
    "stdlib-binary",
    "stdlib-template",
    "stdlib-ini",
    "stdlib-yaml",
    "stdlib-tls",
    "stdlib-functional",
    "stdlib-iter",
    "stdlib-test",
    "stdlib-pprint",
    "stdlib-dict",
    "stdlib-walk",
    "stdlib-sync",
    "stdlib-expect",
    "stdlib-mock",
    "stdlib-prop",
    "stdlib-spec",
    "stdlib-meta",
]
# Each `stdlib-<name>` feature also enables the matching
# `cs-stdlib-meta?/meta-<name>` flag (via the `?` optional-dep
# syntax) so `(crab-list-modules)` reflects whatever's compiled
# in, even on subset builds. cs-stdlib-meta itself is optional;
# the `stdlib` umbrella turns it on by default.
stdlib-meta = ["ffi-trait", "dep:cs-stdlib-meta"]
stdlib-path = ["ffi-trait", "dep:cs-stdlib-path", "cs-stdlib-meta?/meta-path"]
stdlib-fs = ["ffi-trait", "dep:cs-stdlib-fs", "cs-stdlib-meta?/meta-fs"]
stdlib-os = ["ffi-trait", "dep:cs-stdlib-os", "cs-stdlib-meta?/meta-os"]
stdlib-process = ["ffi-trait", "dep:cs-stdlib-process", "cs-stdlib-meta?/meta-process"]
stdlib-string = ["ffi-trait", "dep:cs-stdlib-string", "cs-stdlib-meta?/meta-string"]
stdlib-format = ["ffi-trait", "dep:cs-stdlib-format", "cs-stdlib-meta?/meta-format"]
stdlib-regex = ["ffi-trait", "dep:cs-stdlib-regex", "cs-stdlib-meta?/meta-regex"]
stdlib-time = ["ffi-trait", "dep:cs-stdlib-time", "cs-stdlib-meta?/meta-time"]
stdlib-random = ["ffi-trait", "dep:cs-stdlib-random", "cs-stdlib-meta?/meta-random"]
stdlib-uuid = ["ffi-trait", "dep:cs-stdlib-uuid", "cs-stdlib-meta?/meta-uuid"]
stdlib-json = ["ffi-trait", "dep:cs-stdlib-json", "cs-stdlib-meta?/meta-json"]
stdlib-csv = ["ffi-trait", "dep:cs-stdlib-csv", "cs-stdlib-meta?/meta-csv"]
stdlib-toml = ["ffi-trait", "dep:cs-stdlib-toml", "cs-stdlib-meta?/meta-toml"]
stdlib-base = ["ffi-trait", "dep:cs-stdlib-base", "cs-stdlib-meta?/meta-base"]
stdlib-url = ["ffi-trait", "dep:cs-stdlib-url", "cs-stdlib-meta?/meta-url"]
stdlib-hash = ["ffi-trait", "dep:cs-stdlib-hash", "cs-stdlib-meta?/meta-hash"]
stdlib-compress = ["ffi-trait", "dep:cs-stdlib-compress", "cs-stdlib-meta?/meta-compress"]
stdlib-deflate = ["ffi-trait", "dep:cs-stdlib-deflate", "cs-stdlib-meta?/meta-deflate"]
stdlib-archive = ["ffi-trait", "dep:cs-stdlib-archive", "cs-stdlib-meta?/meta-archive"]
stdlib-log = ["ffi-trait", "dep:cs-stdlib-log", "cs-stdlib-meta?/meta-log"]
stdlib-metrics = ["ffi-trait", "dep:cs-stdlib-metrics", "cs-stdlib-meta?/meta-metrics"]
stdlib-net = ["ffi-trait", "dep:cs-stdlib-net", "cs-stdlib-meta?/meta-net"]
stdlib-http = ["ffi-trait", "dep:cs-stdlib-http", "cs-stdlib-meta?/meta-http"]
stdlib-websocket = ["ffi-trait", "dep:cs-stdlib-websocket", "cs-stdlib-meta?/meta-websocket"]
stdlib-collection = ["ffi-trait", "dep:cs-stdlib-collection", "cs-stdlib-meta?/meta-collection"]
# stdlib-math also pulls a bundled Scheme extension (combinatorics +
# numeric helpers); `bundled-scheme` gates its load at startup.
stdlib-math = ["ffi-trait", "dep:cs-stdlib-math", "cs-stdlib-meta?/meta-math", "bundled-scheme"]
stdlib-tty = ["ffi-trait", "dep:cs-stdlib-tty", "cs-stdlib-meta?/meta-tty"]
stdlib-signal = ["ffi-trait", "dep:cs-stdlib-signal", "cs-stdlib-meta?/meta-signal"]
stdlib-cli = ["ffi-trait", "dep:cs-stdlib-cli", "cs-stdlib-meta?/meta-cli"]
stdlib-crypto = ["ffi-trait", "dep:cs-stdlib-crypto", "cs-stdlib-meta?/meta-crypto"]
stdlib-sql = ["ffi-trait", "dep:cs-stdlib-sql", "cs-stdlib-meta?/meta-sql"]
stdlib-xml = ["ffi-trait", "dep:cs-stdlib-xml", "cs-stdlib-meta?/meta-xml"]
stdlib-binary = ["ffi-trait", "dep:cs-stdlib-binary", "cs-stdlib-meta?/meta-binary"]
stdlib-template = ["ffi-trait", "dep:cs-stdlib-template", "cs-stdlib-meta?/meta-template"]
stdlib-ini = ["ffi-trait", "dep:cs-stdlib-ini", "cs-stdlib-meta?/meta-ini"]
stdlib-yaml = ["ffi-trait", "dep:cs-stdlib-yaml", "cs-stdlib-meta?/meta-yaml"]
stdlib-tls = ["ffi-trait", "dep:cs-stdlib-tls", "cs-stdlib-meta?/meta-tls"]
# RocksDB host-procedure binding. Native-only — excluded from wasm-stdlib.
stdlib-store = ["ffi-trait", "dep:cs-store"]
# Bundled Scheme libraries (no Rust crate / no host procs): each pulls
# in `bundled-scheme`, which gates the include_str! + eval at startup in
# register_stdlib. Adding a new bundled lib needs only its own feature.
bundled-scheme = []
stdlib-functional = ["bundled-scheme"]
stdlib-iter = ["bundled-scheme"]
stdlib-test = ["bundled-scheme"]
stdlib-pprint = ["bundled-scheme"]
stdlib-dict = ["bundled-scheme"]
stdlib-walk = ["bundled-scheme"]
stdlib-sync = ["bundled-scheme"]
stdlib-expect = ["bundled-scheme"]
stdlib-mock = ["bundled-scheme"]
stdlib-prop = ["bundled-scheme"]
stdlib-spec = ["bundled-scheme"]

[dependencies]
cs-core = { workspace = true }
cs-diag = { workspace = true }
cs-expand = { workspace = true }
cs-ffi = { workspace = true, optional = true }
cs-gc = { workspace = true }
cs-ir = { workspace = true }
cs-lex = { workspace = true }
# ADR 0014 — optimizer-pass framework. cs-runtime registers the
# shipped builtin passes at Runtime::new() and exposes Scheme
# builtins (install-optimizer-pass!, etc.) that mutate cs-opt's
# thread-local active-pass list.
cs-opt = { workspace = true }
# Phase 5.4: typer-derived param hints. cs-rir's `Type` is the
# vocabulary the JIT translator consumes, so the Runtime needs
# the alias to accept hints from external callers (cs-cli, etc.).
cs-rir = { workspace = true }
cs-parse = { workspace = true }
# Issue #11 ext-2: library-export auto-contracting. cs-runtime
# runs cs-typer's `extract_annotations` + `auto_contract_library_exports`
# on every `eval_data_in_env` so `(: NAME T)` declared inside a
# library is recognized AND drives an automatic runtime contract
# wrap of the exported binding. Untyped code pays a per-eval
# walk that bails on the first non-typed Datum.
cs-typer = { workspace = true }
cs-vm = { workspace = true }
cs-jit = { workspace = true, optional = true }
cs-jit-cranelift = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
cs-actor = { workspace = true, optional = true }
cs-channel = { workspace = true, optional = true }
cs-table = { workspace = true, optional = true }
# Cross-node transport (the `distrib` feature). cs-net default brings the
# sim + tcp transports; cs-distrib brings NodeId/DistPid/Router.
cs-net = { workspace = true, optional = true }
cs-distrib = { workspace = true, optional = true }
# tokio is pulled in transitively by cs-actor under the `actor`
# feature, but cs-runtime needs a direct dep so it can use
# `tokio::task_local!` for the region-stack task-local
# (parallel-runtime spec C3). `net` + `io-util` are used by the
# `distrib` feature's TCP transport bootstrap (listener/stream +
# the handshake read/write); the multi-thread runtime itself is
# owned by cs-actor and reused via ActorSystem::runtime_handle.
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
], optional = true }
cs-hotreload = { workspace = true, optional = true }
# Stackful coroutines (the `actor` feature): each spawn-activation handler runs
# on a corosensei coroutine so `(sleep)` can suspend the synchronous evaluator
# mid-call and the LocalSet driver can park on a tokio timer — cooperative sleep
# without starving co-located actors. Default features (default-stack + unwind)
# are exactly what we need; `unwind` is mandatory (panic-through-resume + forced
# unwind when a suspended coroutine is dropped at shutdown). Native-only, like
# `actor`. See builtins/beam.rs `drive_handler`.
corosensei = { version = "0.3", optional = true }
cs-sandbox-wasm = { workspace = true, optional = true }
# cs-web is pulled in when the `web` feature is on. Default
# features include actor + table, both of which we already need
# for the `web` feature's integration. `modules` is gated on the
# `web-modules` feature for the cdylib plugin loader.
cs-web = { workspace = true, optional = true, default-features = false, features = ["actor", "table"] }
cs-stdlib-path = { workspace = true, optional = true }
cs-stdlib-fs = { workspace = true, optional = true }
cs-stdlib-os = { workspace = true, optional = true }
cs-stdlib-process = { workspace = true, optional = true }
cs-stdlib-string = { workspace = true, optional = true }
cs-stdlib-format = { workspace = true, optional = true }
cs-stdlib-regex = { workspace = true, optional = true }
cs-stdlib-time = { workspace = true, optional = true }
cs-stdlib-random = { workspace = true, optional = true }
cs-stdlib-uuid = { workspace = true, optional = true }
cs-stdlib-json = { workspace = true, optional = true }
cs-stdlib-csv = { workspace = true, optional = true }
cs-stdlib-toml = { workspace = true, optional = true }
cs-stdlib-base = { workspace = true, optional = true }
cs-stdlib-url = { workspace = true, optional = true }
cs-stdlib-hash = { workspace = true, optional = true }
cs-stdlib-compress = { workspace = true, optional = true }
cs-stdlib-deflate = { workspace = true, optional = true }
cs-stdlib-archive = { workspace = true, optional = true }
cs-stdlib-log = { workspace = true, optional = true }
cs-stdlib-metrics = { workspace = true, optional = true }
cs-stdlib-net = { workspace = true, optional = true }
cs-stdlib-http = { workspace = true, optional = true }
cs-stdlib-websocket = { workspace = true, optional = true }
cs-stdlib-collection = { workspace = true, optional = true }
cs-stdlib-math = { workspace = true, optional = true }
cs-stdlib-tty = { workspace = true, optional = true }
cs-stdlib-signal = { workspace = true, optional = true }
cs-stdlib-cli = { workspace = true, optional = true }
cs-stdlib-crypto = { workspace = true, optional = true }
cs-stdlib-sql = { workspace = true, optional = true }
cs-stdlib-xml = { workspace = true, optional = true }
cs-stdlib-binary = { workspace = true, optional = true }
cs-stdlib-template = { workspace = true, optional = true }
cs-stdlib-ini = { workspace = true, optional = true }
cs-stdlib-yaml = { workspace = true, optional = true }
cs-stdlib-tls = { workspace = true, optional = true }
cs-stdlib-meta = { workspace = true, optional = true }
cs-store = { workspace = true, optional = true }

[dev-dependencies]
# Tests for the ADR 0014 Scheme surface call clear_active_passes
# to isolate test-to-test thread-local state. Production code
# never needs to import cs-opt directly.
cs-ffi-example = { workspace = true }
cs-ffi-macros = { workspace = true }
cs-opt = { workspace = true }

