[package]
name = "cs-stdlib-binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

description = "CrabScheme stdlib module (crab binary) — struct-style binary pack/unpack."

# Pure Rust, no dependencies — portable everywhere including wasm32.
[dependencies]
cs-core = { workspace = true }
cs-ffi = { workspace = true }
